reformatting some slop